# ive_tanim

./: .gitattributes  .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py
docs/: .buildinfo  core_api.html  core_functionality.html  genindex.html  index.html  initialization_api.html  objects.inv  py-modindex.html  search.html  searchindex.js  urls.html
docs/_downloads/556d4b43d2fd9ac8576b3810032742a7/: demo_email.rst
docs/_sources/: core_api.rst.txt  core_functionality.rst.txt  urls.rst.txt
docs/_sources/test_rst_email/: sacpy_demo_email_20221121.rst.txt
docs/_static/: bizstyle.js
docs/input/: demo_email.html
docs/test_rst_email/: sacpy_demo_email_20221121.html
docsrc/source/: conf.py  core_api.rst  core_functionality.rst  index.rst  initialization_api.rst
docsrc/source/input/: demo_email.rst
docsrc/source/test_rst_email/: Makefile  sacpy_demo_email_20221121.msg  sacpy_demo_email_20221121.rst
examples/test_rst_email/: .gitignore  Makefile  sacpy_demo_email_20221121.msg
iv_tanim/cli/: autoCropImage.py  convertImage.py  imageFromURL.py  myrst2html.py  simple_email.py
iv_tanim/core/: autocrop_image.py  convert_image.py  rst2html.py
ive_tanim/: __init__.py
ive_tanim/cli/: autoCropImage.py  convertImage.py  gitZipArchive.py  github_md_2_html.py  myrst2html.py  simple_email.py  simple_email_config.py
ive_tanim/core/: autocrop_image.py  convert_image.py  rst2html.py
ive_tanim/resources/: all_possible_colornames.json
